--- a/styles/cardsinventors.css
+++ b/styles/cardsinventors.css
@@ -20,24 +20,24 @@ body{
     font-size: 300;
     font-size: 16px;
     cursor: pointer;
-
 }
 .main_box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
-
-.cards_inventors{
-
     width: 100%;
-    max-width: 60%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
 }
+
+.cards_inventors {
+    flex: 1 1 30%;
+    display: flex;
+    justify-content: center;
+}
+
 
 .card {
     position: relative; /* hinzugefügt */
@@ -119,7 +119,7 @@ body{
 
 .card-badge {
     display: block;
-    font-size: 20px;
+    font-size: 14px;
     text-transform: lowercase;
     background-color: #dfd8d6;
     border-radius: 10px;
